--- a/translations/kangyur/placeholders/084-001_toh479-the_compendium_of_realities.xml
+++ b/translations/kangyur/placeholders/084-001_toh479-the_compendium_of_realities.xml
@@ -5,25 +5,26 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Compendium of Realities</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">tattvasaṃgraha</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Tattvasaṃgraha</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">de kho na nyid bsdus pa/</title>
                 <title type="otherTitle" xml:lang="en">The Compendium of Realities, a Mahāyāna Sūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgatatattvasaṃgraha­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgata­tattvasaṃgraha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāgatatattvasaṃgraha­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Sarvatathāgata­tattvasaṃgraha­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">一切如來真實攝經</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de kho na nyid bsdus pa theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi de kho na nyid bsdus pa zhes bya ba theg pa chen po'i mdo/</title>
                 <title type="otherTitle" xml:lang="zh">(大正藏：佛說一切如來真實攝大乘現證三昧大教王經)</title>
-                <author role="translatorMain" ref="contributors.xml#team-30"/>
-                <author role="translatorEng" ref="contributors.xml#person-190">Steven Weinberger</author>
-                <consultant role="projectManager" ref="contributors.xml#person-190">Steven Weinberger</consultant>
+                <author role="translatorMain" xml:id="UT22084-084-001-1"/>
+                <author role="translatorEng" xml:id="UT22084-084-001-2">Steven Weinberger</author>
+                <consultant role="projectManager" xml:id="UT22084-084-001-3">Steven Weinberger</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-084-001"/>
                 <date/>
             </publicationStmt>
@@ -38,13 +39,30 @@
                     <idno source-id="O1JC114941JC12192" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-14T14:06:23.218Z" user="admin">14/02/2023 14:06:23</note>
-                <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-13T17:15:30.875Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-13T17:18:28.523Z" user="amy">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-14T14:06:21.719Z" user="amy">Auto (update-sponsorship)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-084-001-4">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T17:15:30.875Z" type="text-version" status="0.0.2" xml:id="UT22084-084-001-5">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2023-02-13T17:18:28.523Z" type="text-version" status="0.0.3" xml:id="UT22084-084-001-6">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#amy" when="2023-02-14T14:06:21.719Z" type="text-version" status="0.0.4" xml:id="UT22084-084-001-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-084-001-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-12T11:07:30.946Z" type="translation-status" status="2.h" xml:id="UT22084-084-001-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-12T11:07:30.946Z" type="text-version" status="0.0.6" xml:id="UT22084-084-001-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
