--- a/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
+++ b/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Hiraṇyavatī</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">hiraṇyavatīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Hiraṇyavatīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dbyig ldan gyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryahiraṇyavatīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryahiraṇyavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dbyig dang ldan pa zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-090-014-1"/>
+                <author role="translatorEng" xml:id="UT22084-090-014-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-014"/>
                 <date/>
             </publicationStmt>
@@ -40,12 +41,27 @@
                     <idno source-id="O1JC114941JC12754" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T09:19:08.932Z" user="admin">16/12/2022 09:19:08</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:18:37.321Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:18:37.321Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:19:07.423Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T09:18:37.321Z" type="translation-status" status="3" xml:id="UT22084-090-014-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:18:37.321Z" type="text-version" status="0.0.1" xml:id="UT22084-090-014-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:19:07.423Z" type="text-version" status="0.0.2" xml:id="UT22084-090-014-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-090-014-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-12T12:48:18.119Z" type="translation-status" status="2.h" xml:id="UT22084-090-014-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-12T12:48:18.119Z" type="text-version" status="0.0.4" xml:id="UT22084-090-014-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
