--- a/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
+++ b/translations/kangyur/translations/061-005_toh185-the_sutra_teaching_the_deployment_of_the_inconceivable_qualities_and_gnosis_of_the_tathagatas_on_their_objects.xml
@@ -24,7 +24,7 @@
                 <sponsor xml:id="UT22084-061-005-807">Make and Wang Xiao Juan (馬珂和王曉娟)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.20 <date>2023</date>
+                <edition>v 1.0.21 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -185,6 +185,9 @@
                 <change who="#martina-cotter" when="2023-12-04T10:27:14.985Z" type="text-version" status="1.0.20" xml:id="UT22084-061-005-852">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#martina-cotter" when="2024-01-12T17:49:30.722Z" type="text-version" status="1.0.21" xml:id="UT22084-061-005-855">
+                    <desc>update from revisions.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -294,7 +297,7 @@
                                                         Herrmann-Pfandt 2008, p. 70, no. 126.</note>
                                 </p>
                                 <milestone unit="chunk" xml:id="UT22084-061-005-20"/>
-                                <p tid="12">No Sanskrit original of the text has survived, but three Chinese versions are known: probably the earliest (Taishō 303) by an
+                                    <p tid="12">Apart from several recently-discovered fragments,<note place="end" xml:id="UT22084-061-005-853">See Karashima 2017.</note> no Sanskrit original of the text has survived. Three Chinese versions are known: probably the earliest (Taishō 303) by an
                                         unknown translator; another (Taishō 302) by the Gandharan monk Jñānagupta, carried out between 585 and 601; and a third
                                         translation (Taishō 304) by the Khotanese monk Śikṣānanda, in 700.<note place="end" xml:id="UT22084-061-005-21"> See
                                                         Lewis R. Lancaster, <title xml:lang="en">The Korean Buddhist Canon</title> (Berkeley: University of
@@ -1843,7 +1846,7 @@
                                     <bibl xml:id="UT22084-061-005-246">Herrmann-Pfandt, Adelheid. <foreign xml:lang="de">Die lHan kar ma: ein früher Katalog der ins Tibetische übersetzten buddhistischen
                                       Texte</foreign>. Wien: Verlag der österreichischen Akademie der Wissenschaften, 2008.</bibl>
                                     <bibl xml:id="UT22084-061-005-247">E. H. Johnston, ed. <title xml:lang="en">The Ratnagotravibhāga Mahāyānottara-tantraśāstra</title>. Patna: Bihar Research Society, 1950.</bibl>
-                                    
+                                      <bibl xml:id="UT22084-061-005-854">Karashima, Seishi. <title xml:lang="en">Some Folios of the <title xml:lang="Sa-Ltn">Tathāgataguṇajñānācintyaviṣayāvatāra</title> and <title xml:lang="Sa-Ltn">Dvādaśadaṇḍakanāmāṣṭaśatavimalīkaraṇā</title> in the Kurita Collection</title>. International Journal of Buddhist Thought &amp; Culture 27, no. 1 (June 2017): 11–44.</bibl>
                                     <bibl xml:id="UT22084-061-005-248">Lancaster, Lewis. <title xml:lang="en">The Korean Buddhist Canon: A Descriptive Catalog</title>. Berkeley: University of
                                       California Press, 1979.</bibl>
                                       <bibl xml:id="UT22084-061-005-849">Norwegian Institute of Palaeography and Historical Philology,  trans. 
@@ -1893,7 +1896,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">samādhi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ting nge ’dzin</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཏིང་ངེ་འཛིན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A general term for states of deep <term rend="ignore">concentration</term>. One of the synonyms for meditation, referring in particular to a state of
           complete <term rend="ignore">concentration</term> or focus.</p>
                             </note>
@@ -2498,7 +2501,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūtakoṭi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yang dag pa’i mtha’</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཡང་དག་པའི་མཐའ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>This term has three meanings: (1) a synonym for the ultimate nature, (2) the experience of the ultimate nature, and (3) the
           quiescent state of an arhat to be avoided by bodhisattvas.</p>
                             </note>
