--- a/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
+++ b/translations/kangyur/placeholders/088-010_toh516,886-the_incantation_the_heap_of_flowers.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Heap of Flowers</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">puṣpakūṭadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Puṣpakūṭadhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">me tog brtsegs pa'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapuṣpakūṭanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryapuṣpakūṭanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa me tog brtsegs pa zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-088-010-1"/>
                 <author role="translatorEng" xml:id="UT22084-088-010-2">Gergely Hidas</author>
@@ -15,11 +15,11 @@
                 <consultant role="projectManager" xml:id="UT22084-088-010-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2023</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-010"/>
                 <date/>
             </publicationStmt>
@@ -88,6 +88,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-12T13:11:56.095Z" type="text-version" status="0.0.10" xml:id="UT22084-088-010-19">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T12:45:59.732Z" type="translation-status" status="2.g" xml:id="UT22084-088-010-20">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T12:45:59.732Z" type="text-version" status="0.0.11" xml:id="UT22084-088-010-21">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
