--- a/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
+++ b/translations/kangyur/placeholders/087-010_toh505-the_incantation_of_vaiduryaprabha.xml
@@ -5,19 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Vaiḍūryaprabha</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">tathāgatavaiḍūrya­prabhanāmabalādhāna­samādhidhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Tathāgatavaiḍūrya­prabhanāmabalādhāna­samādhidhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bai DUr+ya'i 'od gyi gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryatathāgata­vaiḍūryaprabhanāma­balādhānasamādhidhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryatathāgata­vaiḍūryaprabhanāma­balādhānasamādhidhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa de bzhin gshegs pa'i ting nge 'dzin gyi stobs bskyed pa bai DUr+ya'i 'od ces bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <sponsor ref="sponsors.xml#sponsor-2">May, George, Likai and Lillian Gu</sponsor>
+                <author role="translatorMain" xml:id="UT22084-087-010-1"/>
+                <author role="translatorEng" xml:id="UT22084-087-010-2">Adam Krug</author>
+                <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian Gu</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-087-010"/>
                 <date/>
             </publicationStmt>
@@ -32,23 +33,51 @@
                     <idno source-id="O1JC114941JC12226" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-03-09T14:26:26.777Z" user="admin">09/03/2023 14:26:26</note>
-            
-    <note type="updated" update="translation-status" value="3" date-time="2020-09-17T11:56:52.485Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-17T11:56:52.485Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-17T11:57:12.304Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-01-12T15:48:22.804Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-12T15:48:22.804Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-14T10:24:43.543Z" user="line-tofte">Auto (update-sponsorship)</note>
-    <note type="updated" update="translation-status" value="3" date-time="2022-01-11T13:16:41.822Z" user="line-tofte">3</note>
-
-    <note type="updated" update="text-version" value="0.0.5" date-time="2022-01-11T13:16:41.822Z" user="line-tofte">Auto (update-publication-status)</note>
-
-    <note type="updated" update="text-version" value="0.0.6" date-time="2022-01-11T13:16:58.2Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2023-03-09T14:26:21.093Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-09T14:26:21.093Z" user="line-tofte">Auto (update-publication-status)</note>
-</notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-09-17T11:56:52.485Z" type="translation-status" status="3" xml:id="UT22084-087-010-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-17T11:56:52.485Z" type="text-version" status="0.0.1" xml:id="UT22084-087-010-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-09-17T11:57:12.304Z" type="text-version" status="0.0.2" xml:id="UT22084-087-010-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-12T15:48:22.804Z" type="translation-status" status="4" xml:id="UT22084-087-010-7">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-12T15:48:22.804Z" type="text-version" status="0.0.3" xml:id="UT22084-087-010-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-14T10:24:43.543Z" type="text-version" status="0.0.4" xml:id="UT22084-087-010-9">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-11T13:16:41.822Z" type="translation-status" status="3" xml:id="UT22084-087-010-10">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-11T13:16:41.822Z" type="text-version" status="0.0.5" xml:id="UT22084-087-010-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-01-11T13:16:58.2Z" type="text-version" status="0.0.6" xml:id="UT22084-087-010-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-09T14:26:21.093Z" type="translation-status" status="2.h" xml:id="UT22084-087-010-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-09T14:26:21.093Z" type="text-version" status="0.0.7" xml:id="UT22084-087-010-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-087-010-15">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T14:49:18.895Z" type="translation-status" status="2.g" xml:id="UT22084-087-010-16">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T14:49:18.895Z" type="text-version" status="0.0.9" xml:id="UT22084-087-010-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
