--- a/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
+++ b/translations/kangyur/placeholders/088-035_toh540,1078-the_incantation_of_surupa.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-088-035-19">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-088-035"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-14T08:30:56.507Z" type="text-version" status="0.0.11" xml:id="UT22084-088-035-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T15:05:31.606Z" type="translation-status" status="2.c" xml:id="UT22084-088-035-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T15:05:31.606Z" type="text-version" status="0.0.12" xml:id="UT22084-088-035-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
