--- a/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
+++ b/translations/kangyur/placeholders/094-020_toh743,1009-the_incantation_that_cleanses_all_the_obscurations_of_karma.xml
@@ -14,13 +14,14 @@
                 <author role="translatorEng" xml:id="UT22084-094-020-3">Gergely Hidas</author>
                 <author role="translatorEng" xml:id="UT22084-094-020-4">Péter-Dániel Szántó</author>
                 <editor role="projectEditor" xml:id="UT22084-094-020-18">Andreas Doctor</editor>
+                <editor role="copyEditor" xml:id="UT22084-094-020-29">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-094-020"/>
                 <date/>
             </publicationStmt>
@@ -86,6 +87,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-21T09:00:00.847Z" type="text-version" status="0.0.9" xml:id="UT22084-094-020-23">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-21T09:00:37.662Z" type="text-version" status="0.0.10" xml:id="UT22084-094-020-30">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T15:09:37.924Z" type="translation-status" status="2.c" xml:id="UT22084-094-020-31">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T15:09:37.924Z" type="text-version" status="0.0.11" xml:id="UT22084-094-020-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
