--- a/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
+++ b/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">dga' ba can gyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">nandikasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Nandikasūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Nandika</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dga' ba can gyi mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryanandikasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-50"/>
-                <consultant role="projectManager" ref="contributors.xml#person-316">Giuliano Francisco Proença</consultant>
-                <author role="translatorEng" ref="contributors.xml#person-316">Giuliano Francisco Proença</author>
-                <editor role="reviser" ref="contributors.xml#person-359">Daniela Espíndola</editor>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryanandikasūtra</title>
+                <author role="translatorMain" xml:id="UT22084-072-034-1"/>
+                <consultant role="projectManager" xml:id="UT22084-072-034-2">Giuliano Francisco Proença</consultant>
+                <author role="translatorEng" xml:id="UT22084-072-034-3">Giuliano Francisco Proença</author>
+                <editor role="reviser" xml:id="UT22084-072-034-4">Daniela Espíndola</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2021</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-072-034"/>
                 <date/>
             </publicationStmt>
@@ -33,15 +34,42 @@
                     <idno source-id="O1JC114941JC12014" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-31T14:17:43.154Z" user="admin">31/05/2022 14:17:43</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:44:31.284Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:44:31.284Z" user="line-tofte">0.0.1</note>
-    <note type="updated" update="translation-status" value="3" date-time="2021-09-01T13:53:38.454Z" user="line-tofte">3</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-01T13:53:38.454Z" user="line-tofte">Auto (update-publication-status)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-01T13:54:03.42Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-09-01T13:54:35.799Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-05-31T14:17:35.113Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.5" date-time="2022-05-31T14:17:35.113Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-04T12:44:31.284Z" type="translation-status" status="4" xml:id="UT22084-072-034-5">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-04T12:44:31.284Z" type="text-version" status="0.0.1" xml:id="UT22084-072-034-6">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T13:53:38.454Z" type="translation-status" status="3" xml:id="UT22084-072-034-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T13:53:38.454Z" type="text-version" status="0.0.2" xml:id="UT22084-072-034-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T13:54:03.42Z" type="text-version" status="0.0.3" xml:id="UT22084-072-034-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T13:54:35.799Z" type="text-version" status="0.0.4" xml:id="UT22084-072-034-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-31T14:17:35.113Z" type="translation-status" status="2.h" xml:id="UT22084-072-034-11">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-31T14:17:35.113Z" type="text-version" status="0.0.5" xml:id="UT22084-072-034-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-072-034-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:19:49.574Z" type="translation-status" status="2.f" xml:id="UT22084-072-034-14">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:19:49.574Z" type="text-version" status="0.0.7" xml:id="UT22084-072-034-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
