--- a/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
+++ b/translations/kangyur/placeholders/075-004_toh346-the_account_of_the_noble_deeds_of_sumagadha.xml
@@ -17,12 +17,12 @@
                 <editor role="copyEditor" xml:id="UT22084-075-004-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-075-004"/>
                 <date/>
             </publicationStmt>
@@ -91,6 +91,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-12-05T08:59:17.256Z" type="text-version" status="0.0.12" xml:id="UT22084-075-004-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:24:16.715Z" type="translation-status" status="2.b" xml:id="UT22084-075-004-40">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:24:16.715Z" type="text-version" status="0.0.13" xml:id="UT22084-075-004-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
