--- a/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
+++ b/translations/kangyur/placeholders/091-010_toh613,989-the_incantation_of_the_goddess_cunda.xml
@@ -5,18 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of the Goddess Cundā</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">cundadevīdhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Cundadevīdhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo skul byed ma'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryacundadevīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryacundadevīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lha mo skul byed ma zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-091-010-1"/>
+                <author role="translatorEng" xml:id="UT22084-091-010-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2022</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-091-010"/>
                 <date/>
             </publicationStmt>
@@ -40,17 +41,42 @@
                     <idno source-id="O1JC114941JC12752" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-15T13:08:30.443Z" user="admin">15/05/2023 13:08:30</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-13T14:30:41.181Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-13T14:31:20.345Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-12-16T09:16:27.826Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-12-19T08:15:53.756Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-12-19T08:18:13.971Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-15T13:08:26.156Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-15T13:08:26.156Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-13T14:30:41.181Z" type="translation-status" status="3" xml:id="UT22084-091-010-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T14:30:41.181Z" type="text-version" status="0.0.1" xml:id="UT22084-091-010-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-13T14:31:20.345Z" type="text-version" status="0.0.2" xml:id="UT22084-091-010-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:16:27.826Z" type="text-version" status="0.0.3" xml:id="UT22084-091-010-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-19T08:15:53.756Z" type="text-version" status="0.0.4" xml:id="UT22084-091-010-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-19T08:18:13.971Z" type="text-version" status="0.0.5" xml:id="UT22084-091-010-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-15T13:08:26.156Z" type="translation-status" status="2.h" xml:id="UT22084-091-010-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-15T13:08:26.156Z" type="text-version" status="0.0.6" xml:id="UT22084-091-010-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-091-010-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:31:10.248Z" type="translation-status" status="2.g" xml:id="UT22084-091-010-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:31:10.248Z" type="text-version" status="0.0.8" xml:id="UT22084-091-010-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
