--- a/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
+++ b/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
@@ -5,20 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra Teaching the Unfathomable Sphere of a Buddha</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">acintyabuddhaviṣayanirdeśasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Acintyabuddhaviṣayanirdeśasūtra</title>
                 <title type="mainTitle" xml:lang="zh">《說佛國不思議經》(大正藏:《大寶積經善德天子會第三十五》)</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryācintyabuddhaviṣaya­nirdeśa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryācintyabuddhaviṣaya­nirdeśa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sangs rgyas kyi yul bsam gyis mi khyab pa bstan pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-34"/>
-                <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
-                <author role="translatorEng" ref="contributors.xml#person-203">Jed Forman</author>
+                <author role="translatorMain" xml:id="UT22084-043-016-1"/>
+                <author role="translatorEng" xml:id="UT22084-043-016-2">ErdeneBaatar Erdene-Ochir</author>
+                <author role="translatorEng" xml:id="UT22084-043-016-3">Jed Forman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2020</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-043-016"/>
                 <date/>
             </publicationStmt>
@@ -33,16 +34,39 @@
                     <idno source-id="O1JC114941JC11620" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-02-10T13:20:55.076Z" user="admin">10/02/2023 13:20:55</note>
-                <note type="updated" update="translation-status" value="3" date-time="2020-12-09T08:14:10.687Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-12-09T08:14:10.687Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T10:47:16.601Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-04T10:47:35.919Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-08-23T13:08:15.309Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2023-02-10T13:20:49.412Z" user="amy">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-12-09T08:14:10.687Z" type="translation-status" status="3" xml:id="UT22084-043-016-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-12-09T08:14:10.687Z" type="text-version" status="0.0.1" xml:id="UT22084-043-016-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:47:16.601Z" type="text-version" status="0.0.2" xml:id="UT22084-043-016-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T10:47:35.919Z" type="text-version" status="0.0.3" xml:id="UT22084-043-016-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-23T13:08:15.309Z" type="translation-status" status="2.h" xml:id="UT22084-043-016-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-23T13:08:15.309Z" type="text-version" status="0.0.4" xml:id="UT22084-043-016-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#amy" when="2023-02-10T13:20:49.412Z" type="text-version" status="0.0.5" xml:id="UT22084-043-016-10">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-043-016-11">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-17T09:03:41.584Z" type="translation-status" status="2.g" xml:id="UT22084-043-016-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-17T09:03:41.584Z" type="text-version" status="0.0.7" xml:id="UT22084-043-016-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
