--- a/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
+++ b/translations/kangyur/placeholders/066-012_toh254-the_sutra_of_dharmaketu.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-066-012-33">Dawn Collins</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-066-012"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +99,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-10T15:39:59.853Z" type="text-version" status="0.0.15" xml:id="UT22084-066-012-36">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-17T15:38:42.8Z" type="translation-status" status="2.c" xml:id="UT22084-066-012-37">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-17T15:38:42.8Z" type="text-version" status="0.0.16" xml:id="UT22084-066-012-38">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
