--- a/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
+++ b/translations/kangyur/placeholders/072-034_toh334-the_sutra_of_nandika.xml
@@ -15,11 +15,11 @@
                 <editor role="reviser" xml:id="UT22084-072-034-4">Daniela Espíndola</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-034"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T16:19:49.574Z" type="text-version" status="0.0.7" xml:id="UT22084-072-034-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T10:29:13.066Z" type="translation-status" status="2.e" xml:id="UT22084-072-034-16">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T10:29:13.066Z" type="text-version" status="0.0.8" xml:id="UT22084-072-034-17">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
