--- a/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-015_toh521,981-the_essence_of_dependent_arising.xml
@@ -5,19 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Essence of Dependent Arising</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">pratītyasamutpādahṛdaya</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Pratītyasamutpādahṛdaya</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rten 'brel 'byung ba'i snying po/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryapratītyasamutpādahṛdayanāma</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryapratītyasamutpādahṛdayanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rten cing 'brel bar 'byung ba'i snying po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">rten cing 'brel bar 'byung ba'i snying po/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-088-015-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-015-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-088-015"/>
                 <date/>
             </publicationStmt>
@@ -41,14 +42,33 @@
                     <idno source-id="O1JC114941JC12744" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-02T14:51:09.877Z" user="admin">02/05/2023 14:51:09</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:47:13.737Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:47:52.268Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-05-02T14:51:05.525Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-05-02T14:51:05.525Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T09:47:13.737Z" type="translation-status" status="3" xml:id="UT22084-088-015-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:47:13.737Z" type="text-version" status="0.0.1" xml:id="UT22084-088-015-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:47:52.268Z" type="text-version" status="0.0.2" xml:id="UT22084-088-015-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:51:05.525Z" type="translation-status" status="2.h" xml:id="UT22084-088-015-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-02T14:51:05.525Z" type="text-version" status="0.0.3" xml:id="UT22084-088-015-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-088-015-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T11:27:20.096Z" type="translation-status" status="2.g" xml:id="UT22084-088-015-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T11:27:20.096Z" type="text-version" status="0.0.5" xml:id="UT22084-088-015-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
