--- a/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
+++ b/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
@@ -7,15 +7,16 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Essence of the Tathāgata of Medicine</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa sman gyi bla'i snying po'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-100-018-1"/>
+                <author role="translatorMain" xml:id="UT22084-100-018-1">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-100-018-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-100-018-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-100-018"/>
                 <date/>
             </publicationStmt>
@@ -54,6 +55,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-16T16:36:08.039Z" type="text-version" status="0.0.5" xml:id="UT22084-100-018-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-16T16:36:39.988Z" type="text-version" status="0.0.6" xml:id="UT22084-100-018-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T14:00:54.461Z" type="translation-status" status="2.f" xml:id="UT22084-100-018-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-19T14:00:54.461Z" type="text-version" status="0.0.7" xml:id="UT22084-100-018-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
