--- a/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-008-161">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -188,6 +188,12 @@
                 </change>
                 <change who="#sameer" when="2023-09-16T07:57:22.591Z" type="text-version" status="1.0.3" xml:id="UT22084-066-008-165">
                     <desc>Included in App v 3.6</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.4" xml:id="UT22084-066-008-166">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#andre" when="2024-01-23T09:49:28.281Z" type="text-version" status="1.0.5" xml:id="UT22084-066-008-167">
+                    <desc>Applied a fix to a glossary entry's category</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -531,7 +537,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śrāvastī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཉན་ཡོད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital of the ancient
                                                   Kośala kingdom in India.</p>
                             </note>
@@ -557,7 +563,7 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-066-008-58">
+                        <gloss xml:id="UT22084-066-008-58" type="term" mode="match">
                             <term type="translationMain">śrāvaka</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">śrāvaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">nyan thos</term>
