--- a/translations/kangyur/translations/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
+++ b/translations/kangyur/translations/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
@@ -33,7 +33,7 @@
                 <editor role="projectEditor" xml:id="UT22084-066-006-281">George FitzHerbert</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2024</date>
+                <edition>v 1.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -160,6 +160,9 @@
                 </change>
                 <change who="#konchog" when="2024-01-12T16:58:15.867Z" type="text-version" status="1.0.1" xml:id="UT22084-066-006-289">
                     <desc>Several fixes in the front and back matter.</desc>
+                </change>
+                <change who="#andre" when="2024-01-23T10:47:35.36Z" type="text-version" status="1.0.2" xml:id="UT22084-066-006-290">
+                    <desc>Glossary integration revised</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -1603,7 +1606,7 @@
                                                 Press, 2008.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="term" xml:id="UT22084-066-006-180">
@@ -1654,21 +1657,20 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-066-006-183">
-                                                  <term type="translationMain">tīrthikas</term>
-                                                  <term xml:lang="Bo-Ltn" n="1" status="verified">mu stegs can </term>
-                                                  <term xml:lang="bo" n="1">མུ་སྟེགས་ཅན།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">tīrthika</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-066-006-183" type="term" mode="match">
+                            <term type="translationMain">tīrthika</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">tīrthika</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mu stegs can</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">མུ་སྟེགས་ཅན།</term>
+                        </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-066-006-184">
-                                                  <term type="translationMain">disciple</term>
-                                                  <term xml:lang="Bo-Ltn" n="1" status="verified">nyan thos </term>
-                                                  <term xml:lang="bo" n="1">ཉན་ཐོས།</term>
-                                                  <term xml:lang="Sa-Ltn" status="verified">śrāvaka</term>
-                                                  <term type="translationAlternative">śrāvaka</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-066-006-184" type="term" mode="match">
+                            <term type="translationMain">śrāvaka</term>
+                            <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">śrāvaka</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">nyan thos</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཉན་ཐོས།</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-066-006-185">
