--- a/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
+++ b/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
@@ -5,9 +5,9 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Girl Sumati's Questions</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sumatidārikāparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sumatidārikāparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">bu mo blo gros bzang mos zhus pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasumatidārikā­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasumatidārikā­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mo blo gros bzang mos zhus pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-011-1">Dharmasagara Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-011-2">Rebecca Hufen</author>
@@ -17,12 +17,12 @@
                 <editor role="projectEditor" xml:id="UT22084-043-011-21">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-011"/>
                 <date/>
             </publicationStmt>
@@ -76,6 +76,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-13T11:02:01.612Z" type="text-version" status="0.0.8" xml:id="UT22084-043-011-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T14:21:24.723Z" type="translation-status" status="2.d" xml:id="UT22084-043-011-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T14:21:24.723Z" type="text-version" status="0.0.9" xml:id="UT22084-043-011-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
