--- a/translations/tengyur/placeholders/030-001_toh1785-pradipodyotananamatika.xml
+++ b/translations/tengyur/placeholders/030-001_toh1785-pradipodyotananamatika.xml
@@ -4,19 +4,20 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
+                <title xml:lang="en" type="mainTitle">An Extensive Commentary called “The Brightening Lamp”</title>
+                <title xml:lang="Sa-Ltn" type="mainTitle">Pradīpoddyotana­nāma­ṭīkā</title>
                 <title xml:lang="bo" type="mainTitle">སྒྲོན་མ་གསལ་བར་བྱེད་པ་ཞེས་བྱ་བའི་རྒྱ་ཆེར་བཤད་པ།</title>
                 <title xml:lang="Bo-Ltn" type="mainTitle">sgron ma gsal bar byed pa zhes bya ba'i rgya cher bshad pa/</title>
-                <title xml:lang="Sa-Ltn" type="mainTitle">Pradīpoddyotana­nāma­ṭīkā</title>
-                <title xml:lang="en" type="mainTitle">An Extensive Commentary called “The Brightening Lamp”</title>
-                <author role="translatorMain" ref="contributors.xml#team-55"/>
-                <author role="translatorEng" ref="contributors.xml#person-7">Paul Hackett</author>
+                <author role="translatorMain" xml:id="UT23703-030-001-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT23703-030-001-2">Paul Hackett</author>
+                <editor role="projectEditor" xml:id="UT23703-030-001-17">Torsten Gerloff</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 
-                    <date>2021</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT23703-030-001"/>
                 <date/>
             </publicationStmt>
@@ -24,12 +25,12 @@
                 <bibl key="toh1785" type="text">
                     <ref>Toh 1785</ref>
                     <biblScope>ff. 1v-201v</biblScope>
-                    <author ref="eft:entity-17927" xml:lang="Sa-Ltn">Candrakīrti</author>
-                    <author role="translatorTib" ref="eft:entity-17459" xml:lang="Bo-Ltn">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
-                    <author role="translatorTib" ref="eft:entity-17476" xml:lang="Sa-Ltn">Śraddhākaravarman</author>
-                    <editor role="reviser" ref="eft:entity-17609" xml:lang="Sa-Ltn" revision="1">Jñānākara</editor>
-                    <editor role="reviser" ref="eft:entity-17544" xml:lang="Sa-Ltn" revision="2">Kāṇhapa</editor>
-                    <editor role="reviser" ref="eft:entity-17554" xml:lang="Bo-Ltn" revision="1">bod kyi lo tsA ba 'gos lhas btsas</editor>
+                    <author xml:lang="Sa-Ltn" xml:id="UT23703-030-001-3">Candrakīrti</author>
+                    <author role="translatorTib" xml:lang="Bo-Ltn" xml:id="UT23703-030-001-4">zhu chen gyi lo tsa ba dge slong rin chen bzang po</author>
+                    <author role="translatorTib" xml:lang="Sa-Ltn" xml:id="UT23703-030-001-5">Śraddhākaravarman</author>
+                    <editor role="reviser" xml:lang="Sa-Ltn" revision="1" xml:id="UT23703-030-001-6">Jñānākara</editor>
+                    <editor role="reviser" xml:lang="Sa-Ltn" revision="2" xml:id="UT23703-030-001-7">Kāṇhapa</editor>
+                    <editor role="reviser" xml:lang="Bo-Ltn" revision="1" xml:id="UT23703-030-001-8">bod kyi lo tsA ba 'gos lhas btsas</editor>
                     <location work="UT23703" count-pages="401">
                         <volume number="30" start-page="2" end-page="402"/>
                     </location>
@@ -38,14 +39,36 @@
                 </bibl>
                 <link type="isCommentaryOf" target="toh442"/>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-01T10:04:54.6Z" user="admin">01/09/2021 10:04:54</note>
-                <note type="updated" update="translation-status" value="3" date-time="2021-05-19T13:43:36.759Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-19T13:43:36.759Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-19T13:44:08.8Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-01T10:04:49.199Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="import" value="fileDesc" import="tengyur-data-1784-1917_PH_new_v2.4.xml" date-time="2021-11-02T13:32:54.498Z" user="admin"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-05-19T13:43:36.759Z" type="translation-status" status="3" xml:id="UT23703-030-001-9">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-19T13:43:36.759Z" type="text-version" status="0.0.1" xml:id="UT23703-030-001-10">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-05-19T13:44:08.8Z" type="text-version" status="0.0.2" xml:id="UT23703-030-001-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-01T10:04:49.199Z" type="text-version" status="0.0.3" xml:id="UT23703-030-001-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2021-11-02T13:32:54.498Z" type="import" xml:id="UT23703-030-001-13" source="tengyur-data-1784-1917_PH_new_v2.4.xml">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT23703-030-001-14">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-12-11T10:07:09.148Z" type="text-version" status="0.0.5" xml:id="UT23703-030-001-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:14:56.105Z" type="translation-status" status="2.h" xml:id="UT23703-030-001-19">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:14:56.105Z" type="text-version" status="0.0.6" xml:id="UT23703-030-001-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
