--- a/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
+++ b/translations/kangyur/placeholders/072-021_toh321-verses_on_circumambulating_reliquaries.xml
@@ -18,12 +18,12 @@
                 <editor role="copyEditor" xml:id="UT22084-072-021-36">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-072-021"/>
                 <date/>
             </publicationStmt>
@@ -92,6 +92,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-10T16:06:44.52Z" type="text-version" status="0.0.12" xml:id="UT22084-072-021-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:46:53.81Z" type="translation-status" status="2.c" xml:id="UT22084-072-021-40">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-01-23T16:46:53.81Z" type="text-version" status="0.0.13" xml:id="UT22084-072-021-41">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
